fix overflow

--- a/src/scss/base/index.scss
+++ b/src/scss/base/index.scss
@@ -8,3 +8,7 @@ body {
   box-sizing: content-box;
   font-family: Robot;
 }
+
+.ContainerOP {
+  overflow: hidden;
+}
